c/examples/writing-a-c-compiler-tests/tests/chapter_13/valid/libraries/use_arg_after_fun_call.c
double fun(double x) {
    if (x > 2)
        return x;
    else {
        double ret = fun(x + 2); // ret = 3.0
        return ret + x; // return 4.0
    }
}
