c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_parse/invalid_type_specifier_2.c
int main(void) {
    /* "double double" is not a valid type specifier */
    double double d = 10.0;
    return 0;
}